# eval

./: .gitignore  main.py  pyproject.toml
ps2/: app.py
ps2/expr/: expression.py
ps2/statement/: statement.py
ps2/symbol_table/: environment.py
